--- a/frontend/css/dashboard/dashboard.css
+++ b/frontend/css/dashboard/dashboard.css
@@ -41,7 +41,8 @@ body {
 /* Full-width input fields */
 .form-container select,
 .form-container input[type=text],
-.form-container input[type=password] {
+.form-container input[type=password],
+.form-container textarea {
     width: 100%;
     padding: 15px;
     margin: 5px 0 22px 0;
@@ -51,7 +52,8 @@ body {
 
 /* When the inputs get focus, do something */
 .form-container input[type=text]:focus,
-.form-container input[type=password]:focus {
+.form-container input[type=password]:focus,
+.form-container textarea:focus {
     background-color: #ddd;
     outline: none;
 }
