--- a/frontend/css/dashboard/dashboard.css
+++ b/frontend/css/dashboard/dashboard.css
@@ -80,3 +80,27 @@ body {
 .open-button:hover {
     opacity: 1;
 }
+
+body {
+    font-size: 140%;
+}
+
+h2 {
+    text-align: center;
+    padding: 20px 0;
+}
+
+table caption {
+    padding: .5em 0;
+}
+
+table.dataTable th,
+table.dataTable td {
+    white-space: nowrap;
+}
+
+.p {
+    text-align: center;
+    padding-top: 140px;
+    font-size: 14px;
+}
