--- a/frontend/css/dashboard/dashboard.css
+++ b/frontend/css/dashboard/dashboard.css
@@ -5,6 +5,7 @@
 /* set body background */
 body {
     background-color: #0c2d48;
+    font-family: 'Outfit', sans-serif;
 }
 
 /* Button used to open the contact form - fixed at the bottom of the page */
@@ -103,4 +104,12 @@ table.dataTable td {
     text-align: center;
     padding-top: 140px;
     font-size: 14px;
+}
+
+.center-element {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    min-height: 90vh;
 }
