--- a/frontend/css/dashboard/dashboard.css
+++ b/frontend/css/dashboard/dashboard.css
@@ -6,9 +6,14 @@
 body {
     background-color: #0c2d48;
     font-family: 'Outfit', sans-serif;
+    font-size: 140%;
 }
 
-/* Button used to open the contact form - fixed at the bottom of the page */
+button { 
+    border-radius: 4px;
+}
+
+/* Button used to open the log form - fixed at the bottom of the page */
 .open-button {
     background-color: #555;
     color: white;
@@ -26,7 +31,7 @@ body {
 .form-popup {
     display: none;
     position: fixed;
-    bottom: 0;
+    bottom: -40;
     right: 15px;
     border: 3px solid #f1f1f1;
     z-index: 9;
@@ -34,9 +39,10 @@ body {
 
 /* Add styles to the form container */
 .form-container {
-    max-width: 300px;
+    max-width: 30%;
     padding: 10px;
     background-color: white;
+    font-size: 71%;
 }
 
 /* Full-width input fields */
@@ -80,10 +86,6 @@ body {
 .form-container .btn:hover,
 .open-button:hover {
     opacity: 1;
-}
-
-body {
-    font-size: 140%;
 }
 
 h2 {
