--- a/frontend/css/header.css
+++ b/frontend/css/header.css
@@ -1,3 +1,16 @@
+#logOutButtonDiv{
+    position: fixed;
+    display: block;
+    right: 25px;
+    top: 0.7rem;
+}
+
+#logOutButtonDiv > p {
+    color: white;
+    font-size: 1rem;
+    margin: 5;
+}
+
 #logoutButton {
     background-color: #ee3939;
     color: white;
@@ -6,14 +19,14 @@
     cursor: pointer;
     opacity: 0.8;
     width: 10rem;
-    position: fixed;
-    display: block;
-    right: 25px;
-    top: 1.9rem;
 
     /* set text size */
     font-size: 1rem;
     font-weight: bold;
+
+    /* align to the right of the parent */
+    position: absolute;
+    right: 0;
 }
 
 #logoutButton:hover {
